--- a/css/styles.css
+++ b/css/styles.css
@@ -17,14 +17,21 @@ button {
 }
 
 .logo {
+  font-size: 18px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 
 .logo-text {
+  color: #2e2f42;
 }
 
 /* Header */
 
 .header {
+  background-color: #fff;
 }
 .header-nav {
 }
@@ -33,21 +40,50 @@ button {
 .header-nav-item {
 }
 .header-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.header-link:hover,
+.header-link:focus {
+  color: #404bbf;
 }
 .address {
 }
 .address-list {
 }
 .address-item {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.address-item:hover,
+.address-item:focus {
+  color: #404bbf;
 }
 
 /* Hero */
 
 .business {
+  background-color: #2e2f42;
 }
 .business-titel {
+  font-size: 56px;
+  line-height: 1.07143;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
 }
 .business-btn {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4d5ae5;
 }
 
 /* Advantages */
