--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 .body {
   font-family: 'Roboto', sans-serif;
-  background-color: #fff;
+  background-color: #ffffff;
+  color: #434455;
 }
 
 ul,
@@ -17,9 +18,10 @@ button {
 }
 
 .logo {
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
@@ -52,6 +54,7 @@ button {
   color: #404bbf;
 }
 .address {
+  font-style: normal;
 }
 .address-list {
 }
@@ -75,13 +78,14 @@ button {
 .business-titel {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07143;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
 }
 .business-btn {
-  font-weight: 700;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -128,7 +132,7 @@ button {
 .team-titel {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
@@ -136,6 +140,7 @@ button {
 .team-list {
 }
 .team-list-iteam {
+  background-color: #fff;
 }
 .team-foto {
   background: url('path_to_image');
@@ -179,7 +184,7 @@ button {
 .portfolio-list-titel {
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
@@ -201,5 +206,14 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
+
+.logo-text-footer {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.16667;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: #f4f4fd;
 }
