--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,6 @@ button {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
   cursor: pointer;
 }
@@ -136,6 +135,7 @@ button {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 .team-list {
 }
@@ -143,7 +143,6 @@ button {
   background-color: #fff;
 }
 .team-foto {
-  background: url('path_to_image');
 }
 .team-list-titel {
   font-weight: 500;
@@ -173,13 +172,13 @@ button {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 .portfolio-list {
 }
 .portfolio-list-item {
 }
 .portfolio-foto {
-  background: url('path_to_image');
 }
 .portfolio-list-titel {
   font-weight: 500;
